--- a/style.css
+++ b/style.css
@@ -1,30 +1,69 @@
-html {
-  height: 100%;
+body {
+  padding-top: 70px;
 }
-body{
-  background-image: url(https://images.unsplash.com/photo-1415369629372-26f2fe60c467);
+
+.jumbotron{
+  color: #2c3e50;
+  background-color: #ecf0f1;
+}
+
+.navbar-inverse{
+  background-color: #2c3e50;
+}
+
+.navbar-inverse .navbar-nav>li>a {
+    color: white;
+}
+
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+
+.image {
   width: 100%;
+  height: 250px;
   background-size: cover;
   background-position: center;
-  font-family: Lato;
-  color:white;
 }
 
-#content {
-  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
-                0px 8px 13px rgba(0, 0, 0, 0.1),
-                0px 16px 23px rgba(0, 0, 0, 0.1);  
-  text-align: center;
-  margin-top: 25%;
+.image1 {
+  background-image: url(https://source.unsplash.com/_vPbUVNk4Kc);
 }
 
-h1{
-  font-weight: 700;
-  font-size: 5em;
+.image2 {
+  background-image: url(https://source.unsplash.com/a0nbRUHimZw);
+  background-position: 50% 65%;
 }
 
-hr {
-  width: 400px;
-  border-top: 1px solid #f8f8f8;
-  border-bottom: 1px solid rgba(0,0,0,0.2);
+.image3 {
+  background-image: url(https://source.unsplash.com/vlEtNLN3bbI);
 }
+
+.image4 {
+  background-image: url(https://source.unsplash.com/XmAmstAaDNM);
+  background-position: 50% 20%;
+}
+
+.image5 {
+  background-image: url(https://source.unsplash.com/hE3Tpe5GdbQ);
+  background-position: 50% 75%;
+}
+
+.image6 {
+  background-image: url(https://source.unsplash.com/pIyanw6rSiQ);
+}
+
+.image7 {
+  background-image: url(https://source.unsplash.com/Xnz6Iq3BUbE);
+}
+
+.image8 {
+  background-image: url(https://source.unsplash.com/mPnxwQBtUZE);
+}
+
+.image9 {
+  background-image: url(https://source.unsplash.com/mkPVPP7R2s8);
+}
+
+
+/* blue = #2c3e50  #ecf0f1
