--- a/style.css
+++ b/style.css
@@ -5,19 +5,15 @@ body{
   font-family: "Montserrat";
 }
 .square{
+  width: 30%;
+	padding-bottom: 30%;
+	float: left;
+	margin: 1.66%;
+	border-radius: 15%;
+	transition: background 0.6s,opacity 2s;
+	-webkit-transition: background 0.6s,opacity 0.4s;
+	-moz-transition: background 0.6s,opacity 0.4s;
 
-  width:30%;
-  background: purple;
-  padding-bottom: 30%;
-  float: left;
-  margin: 1%;
-  border-radius: 10%;
-  transition: background 0.4s;
-  -webkit-transition: background 0.4s;
-  -moz-transition: background 0.4s;
-  transition: opacity 0.4s;
-  -webkit-transition: opacity 0.4s;
-  -moz-transition: opacity 0.4s;
 }
 
 .square:hover{
